[package]
name = "lru_cache"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause OR Apache-2.0 OR MIT"
rust-version = "1.85.0"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Configurable, efficient and simple LRU (Least Recently Used) cache"

categories = ["algorithms", "caching", "data-structures"]

keywords = ["cache", "lru", "hashmap", "data-structures"]

[dependencies]

hash-injector = { path = "../hash-injector/hash-injector-lib", features = ["asserts", "injector_checks_finish", "injector_checks_same_flow"]}

[features]
force_debug_hasher = []
# default = ["force_debug_hasher"]
