[package]
name = "lru_cache"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause OR Apache-2.0 OR MIT"
rust-version = "1.85.0"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Configurable, efficient and simple LRU (Least Recently Used) cache"

categories = ["algorithms", "caching", "data-structures"]

keywords = ["cache", "lru", "hashmap", "data-structures"]

[dependencies]

hash-injector = { path = "../hash-injector/hash-injector-lib", features = ["asserts", "injector-checks-finish", "injector-checks-same-flow"]}

[features]

# Expensive
asserts = ["hash-injector/asserts"]

# Use to check that the Hasher is (or behaves like) `SignalledInjectionHasher`. Use only if the types
# that inject hashes are never to be used with any incompatible Hasher.
#
# Expensive depending on
# - the underlying Hasher (its `finish(self)`), or
# - the "original" hashed type containing (directly or indirectly) arrays or slices, especially if
#   multiple.
injector-checks-finish = ["hash-injector/injector-checks-finish"]

# Check that signal)first(F) for const generic F is the same between `signal_inject_hash(...)` and
# `SignalledInjectionHasher`.
#
# Use ONLY if injector-checks-finish is enabled, too.
#
# Expensive.
injector-checks-same-flow = ["hash-injector/injector-checks-same-flow"]

# Whether to use a higher level type for the const generic parameter. If enabled, currently it
# requires nightly toolchain.
adt-const-params = ["hash-injector/adt-const-params"]

#default = [                    "asserts"]
#default = [                    "asserts", "injector-checks-finish"]

# NOT allowed:
#default = [                                                         "injector-checks-same-flow"]
# NOT allowed:
#default = [                    "asserts",                           "injector-checks-same-flow"]

#default = [                    "asserts", "injector-checks-finish", "injector-checks-same-flow"]

#default = ["adt-const-params", "asserts"]
#default = ["adt-const-params", "asserts", "injector-checks-finish"]

# NOT allowed:
#default = ["adt-const-params",                                      "injector-checks-same-flow"]
# NOT allowed:
#default = ["adt-const-params", "asserts",                           "injector-checks-same-flow"]

#default = ["adt-const-params", "asserts", "injector-checks-finish", "injector-checks-same-flow"]
